--- a/index.html
+++ b/index.html
@@ -179,136 +179,90 @@
         <h2>WE ARE SKILLED AT THESE TOOLS</h2>
         <hr>
         <h3>These are the tools we use and we are quite skilled at most of them.</h3>
-        <div class="row">
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="HTML" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="CSS" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="JavaScript" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="ReactJS" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="ASP.NET Core MVC" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="C#" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Java" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Android" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Windows 10" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Wolfram Mathematica" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="MATLAB" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="R" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="NodeJS" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Swift" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="HTML" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
-          </div>
-
-          <div class="skill-card col-xs-4 col-md-2">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="HTML" width=80%>
-            <p>Expert</p>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="sr-only">80% Complete (success)</span></div>
-            </div>
+      </div>
+      <subsection id="langs">
+        <div class="container skills">
+          <h3>Languages</h3>
+          <div class="row">
+            <ul>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="HTML"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="CSS3"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="JavaScript"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="C#"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Java">
+              </li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Python">
+              </li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Swift"></li>
+            </ul>
           </div>
         </div>
-      </div>
+      </subsection>
+
+      <subsection id="frameworks">
+        <div class="container skills">
+          <h3>Frameworks</h3>
+          <div class="row">
+            <ul>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt=".NET Core"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="ME(AR)N"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Android"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="iOS"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Java"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Python"></li>
+            </ul>
+          </div>
+        </div>
+      </subsection>
+
+      <subsection id="software">
+        <div class="container skills">
+          <h3>Softwares</h3>
+          <div class="row">
+            <ul>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="VS Code"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Git"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="MATLAB"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Maple"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+               <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Wolfram"></li>
+            </ul>
+          </div>
+        </div>
+      </subsection>
+
+      <subsection id="soft">
+        <div class="container skills">
+          <h3>Soft Skills</h3>
+          <div class="row">
+            <ul>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Writing"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Research"></li>
+              <li class="col-xs-4 col-md-2 skill-card">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Analysis"></li>
+            </ul>
+          </div>
+        </div>
+      </subsection>
     </section>
 
     <section id="about">
@@ -350,10 +304,21 @@
     
    <footer>
       <ul>
+        <li><a href="https://github.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-github"></i></a></li>
+        <li><a href="https://linkedin.com/in/mubarakimam/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
+        <li><a href="https://medium.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-medium"></i></a></li>
+        <li><a href="https://app.plum.io/mubarakimam/" target="_blank"><i class="fa fa-2x fa-plum"></i></a></li>
         <li><a href="https://twitter.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-twitter"></i></a></li>
         <li><a href="https://facebook.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-facebook"></i></a></li>
-        <li><a href="https://linkedin.com/in/mubarakimam/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
         <li><a href="https://instagram.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-instagram"></i></a></li>
+        <li><a href="https://plus.google.com/mubarakimam1/" target="_blank"><i class="fa fa-2x fa-google"></i></a></li>
+        <li><a href="https://freecodecamp.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-fire"></i></a></li>
+        <li><a href="https://codepen.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-codepen"></i></a></li>
+        <li><a href="https://quora.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-quora"></i></a></li>
+        <li><a href="https://researchgate.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-researchgate"></i></a></li>
+        <li><a href="https://flickr.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-flickr"></i></a></li>
+        <li><a href="https://angels.io/mubarakimam/" target="_blank"><i class="fa fa-2x fa-angel"></i></a></li>
+        <li><a href="https://bayt,com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-bayt"></i></a></li>
       </ul>
       <h4>Designed by Mubarak Imam with <i class="fa fa-heart fa-lg"></i> from Lagos, <i class="fa fa-ng fa-lg"></i></h4>
       <h4> 2016 All Rights Reserved.</h4> 
