fixed broken links

--- a/index.html
+++ b/index.html
@@ -306,19 +306,19 @@
       <ul>
         <li><a href="https://github.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-github"></i></a></li>
         <li><a href="https://linkedin.com/in/mubarakimam/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
-        <li><a href="https://medium.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-medium"></i></a></li>
-        <li><a href="https://app.plum.io/mubarakimam/" target="_blank"><i class="fa fa-2x fa-plum"></i></a></li>
+        <li><a href="https://medium.com/@mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-medium"></i></a></li>
+        <li><a href="https://app.plum.io/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-plum"></i></a></li>
         <li><a href="https://twitter.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-twitter"></i></a></li>
         <li><a href="https://facebook.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-facebook"></i></a></li>
         <li><a href="https://instagram.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-instagram"></i></a></li>
-        <li><a href="https://plus.google.com/mubarakimam1/" target="_blank"><i class="fa fa-2x fa-google"></i></a></li>
-        <li><a href="https://freecodecamp.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-fire"></i></a></li>
-        <li><a href="https://codepen.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-codepen"></i></a></li>
-        <li><a href="https://quora.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-quora"></i></a></li>
-        <li><a href="https://researchgate.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-researchgate"></i></a></li>
-        <li><a href="https://flickr.com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-flickr"></i></a></li>
-        <li><a href="https://angels.io/mubarakimam/" target="_blank"><i class="fa fa-2x fa-angel"></i></a></li>
-        <li><a href="https://bayt,com/mubarakimam/" target="_blank"><i class="fa fa-2x fa-bayt"></i></a></li>
+        <li><a href="https://plus.google.com/mubarakadeimam1/" target="_blank"><i class="fa fa-2x fa-google"></i></a></li>
+        <li><a href="https://freecodecamp.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-fire"></i></a></li>
+        <li><a href="https://codepen.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-codepen"></i></a></li>
+        <li><a href="https://quora.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-quora"></i></a></li>
+        <li><a href="https://researchgate.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-researchgate"></i></a></li>
+        <li><a href="https://flickr.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-flickr"></i></a></li>
+        <li><a href="https://angels.io/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-angel"></i></a></li>
+        <li><a href="https://bayt,com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-bayt"></i></a></li>
       </ul>
       <h4>Designed by Mubarak Imam with <i class="fa fa-heart fa-lg"></i> from Lagos, <i class="fa fa-ng fa-lg"></i></h4>
       <h4> 2016 All Rights Reserved.</h4> 
