fixed all profile links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="styles/bootstrap-theme.css" type="text/css">
     <link rel="stylesheet" href="styles/overlay.css" type="text/css">
-    <link rel="stylesheet" href="styles/font-awesome.css" type="text/css">
+    <link rel="stylesheet" href="styles/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="styles/extra.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -305,20 +305,21 @@
    <footer>
       <ul>
         <li><a href="https://github.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-github"></i></a></li>
+        <li><a href="https://bitbucket.com/mubarakadeimam" target="_blank"><i class="fa fa-2x fa-bitbucket"></i></a></li>
         <li><a href="https://linkedin.com/in/mubarakimam/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
         <li><a href="https://medium.com/@mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-medium"></i></a></li>
-        <li><a href="https://app.plum.io/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-plum"></i></a></li>
+        <li><a href="https://app.plum.io/profile/mubarakadeimam" target="_blank"><img src="https://plum-application.s3.amazonaws.com/static/img/logo-p-styled.png"></a></li>
         <li><a href="https://twitter.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-twitter"></i></a></li>
         <li><a href="https://facebook.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-facebook"></i></a></li>
         <li><a href="https://instagram.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-instagram"></i></a></li>
-        <li><a href="https://plus.google.com/mubarakadeimam1/" target="_blank"><i class="fa fa-2x fa-google"></i></a></li>
-        <li><a href="https://freecodecamp.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-fire"></i></a></li>
+        <li><a href="https://plus.google.com/+MubarakAdeImam1" target="_blank"><i class="fa fa-2x fa-google-plus"></i></a></li>
+        <li><a href="https://freecodecamp.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-free-code-camp"></i></a></li>
         <li><a href="https://codepen.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-codepen"></i></a></li>
-        <li><a href="https://quora.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-quora"></i></a></li>
-        <li><a href="https://researchgate.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-researchgate"></i></a></li>
-        <li><a href="https://flickr.com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-flickr"></i></a></li>
-        <li><a href="https://angels.io/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-angel"></i></a></li>
-        <li><a href="https://bayt,com/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-bayt"></i></a></li>
+        <li><a href="https://www.quora.com/profile/Mubarak-Adeshina-Imam" target="_blank"><i class="fa fa-2x fa-quora"></i></a></li>
+        <li><a href="https://www.researchgate.net/profile/Mubarak_Imam" target="_blank"><img src="https://www.researchgate.net/apple-touch-icon-180x180.png"></a></li>
+        <li><a href="https://www.flickr.com/photos/mubarakadeimam/" target="_blank"><i class="fa fa-2x fa-flickr"></i></a></li>
+        <li><a href="https://angel.co/mubarakadeimam" target="_blank"><i class="fa fa-2x fa-angellist"></i></a></li>
+        <li><a href="https://about.me/mubarakadeimam" target="_blank"><img src="https://cdn.about.me/images/icons/favicon/favicon-144-MS.png"></a></li>
       </ul>
       <h4>Designed by Mubarak Imam with <i class="fa fa-heart fa-lg"></i> from Lagos, <i class="fa fa-ng fa-lg"></i></h4>
       <h4> 2016 All Rights Reserved.</h4> 
