--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <section id="cover">
       <div class="jumbotron">
-        <img src="media/banner.png">
+        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
       </div>
     </section>
    
