fixed http url refs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Meet Mubarak Imam!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="//db.onlinewebfonts.com/c/3bf7501ddcf8338bc9cdcedad10914cb?family=Aller" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="assets/styles/reset.css">
     <link rel="stylesheet" href="assets/styles/main.css">
@@ -60,39 +59,39 @@
           </div>
           <div class="services__sections">
             <div class="services__section">
-              <div class="service__icon">
-                <i class="fas fa-2x fa-cubes"></i>
+              <div class="service__title">
+                <i class="fas fa-2x fa-cubes"></i>&nbsp;
+                <h2 class="service__summary_title">Software Architecture</h2>
               </div>
               <div class="service__summary">
-                <h2 class="service__summary_title">Software Architecture</h2>
-                <h4 class="service__summmary_text">Design scalable, secure and efficient systems following industry-proven best practices.</h4>
+                <h4 class="service__title_text">Design scalable, secure and efficient systems following industry-proven best practices.</h4>
               </div>
             </div>
             <div class="services__section">
-              <div class="service__icon">
-                <i class="fas fa-2x fa-phone-laptop"></i>
+              <div class="service__title">
+                <i class="fas fa-2x fa-phone-laptop"></i>&nbsp;
+                <h2 class="service__summary_title">Web and Mobile Development</h2>
               </div>
               <div class="service__summary">
-                <h2 class="service__summary_title">Web and Mobile Development</h2>
-                <h4 class="service__summmary_text">Build value-driven Progressive Web Applications and cross-platform mobile applications.</h4>
+                <h4 class="service__title_text">Build value-driven Progressive Web Applications and cross-platform mobile applications.</h4>
               </div>
             </div>
             <div class="flex-break"></div>
             <div class="services__section">
-              <div class="service__icon">
-                <i class="fas fa-2x fa-cloud-upload-alt"></i>
+              <div class="service__title">
+                <i class="fas fa-2x fa-cloud-upload-alt"></i>&nbsp;
+                <h2 class="service__titletitle">Cloud Application Development</h2>
               </div>
               <div class="service__summary">
-                <h2 class="service__summary_title">Cloud Application Development</h2>
                 <h4 class="service__summmary_text">Build and deploy services that run on cloud and on-premise hosting services live GCP, AWS and Azure.</h4>
               </div>
             </div>
             <div class="services__section">
-              <div class="service__icon">
-                <i class="fas fa-2x fa-users"></i>
+              <div class="service__title">
+                <i class="fas fa-2x fa-users"></i>&nbsp;
+                <h2 class="service__titletitle">Technical Leadership</h2>
               </div>
               <div class="service__summary">
-                <h2 class="service__summary_title">Technical Leadership</h2>
                 <h4 class="service__summmary_text">Lead highly productive agile teams with utmost regards for SLAs, and ensure system quality.</h4>
               </div>
             </div>
